# NdkSample

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/cfanr/ndksample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  log.h  native_file_handler.cpp
app/src/main/cpp/bzip2/: CMakeLists.txt
app/src/main/java/cn/cfanr/ndksample/: AppController.java  FileHandlerActivity.java  LibJpegActivity.java  MainActivity.java  PatchUpdateActivity.java
app/src/main/java/cn/cfanr/ndksample/utils/: BsPatch.java  FileUtils.java  PatchUpdate.java  SignUtils.java  ToastUtils.java
app/src/main/res/layout/: activity_file_handler.xml  activity_lib_jpeg.xml  activity_main.xml  activity_patch_update.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/cfanr/ndksample/: ExampleUnitTest.java
cmake/: .gitignore  README.md
cmake/s1/: CMakeLists.txt  main.c
cmake/s2/: CMakeLists.txt  hello.c
cmake/s3/: CMakeLists.txt  hello.h
cmake/s4/: CMakeLists.txt
cmake/s4/libhello/: CMakeLists.txt
cmake/s4/src/: CMakeLists.txt
cmake/s5/libhello/: CMakeLists.txt
cmake/s5/src/: CMakeLists.txt
cmake/s6/libhello/: CMakeLists.txt  hello.h
cmake/s6/src/: main.c
compress/: CMakeLists.txt  build.gradle
compress/src/main/: AndroidManifest.xml
compress/src/main/cpp/: compress.c  compress.h  lang.h  log.h
compress/src/main/cpp/include/: jpeglib.h
compress/src/main/java/cn/cfanr/compress/: ImageCompress.java
gradle/wrapper/: gradle-wrapper.properties
